<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/backgr">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:visibility="visible" app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="4dp" android:layout_marginStart="4dp"
            android:layout_marginRight="4dp" android:layout_marginEnd="4dp" app:cardElevation="8dp"
            android:layout_marginTop="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView android:layout_width="match_parent"
                                                          android:layout_height="160dp"
                                                          app:layout_constraintTop_toTopOf="parent"
                                                          app:layout_constraintStart_toStartOf="parent"
                                                          android:id="@+id/iv_video_thumbnail"/>
            <TextView
                    android:text="@string/placeholder_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/tv_video_title"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/iv_video_thumbnail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:textSize="24sp" android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/placeholder_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_video_date"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_video_title"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:text="@string/placeholder_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_video_views_count"
                    app:layout_constraintEnd_toStartOf="@+id/tv_video_views" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_video_views"
                    app:layout_constraintTop_toTopOf="@+id/tv_video_views"/>
            <TextView
                    android:text="@string/views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_video_views"
                    app:layout_constraintEnd_toEndOf="@+id/iv_video_thumbnail" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_video_title"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>