<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.VideoDetailsActivity">

    <VideoView android:layout_width="match_parent" android:layout_height="300dp"
               android:minHeight="300dp" android:id="@+id/videoView" app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/videoView">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/placeholder_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/tv_video_title"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textColor="@android:color/black" android:textSize="24sp"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/tv_video_title"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp" android:id="@+id/linearLayout">
                    <TextView
                            android:text="@string/placeholder_views"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_video_views_count"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                    <TextView
                            android:text="@string/views"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:id="@+id/tv_video_views"
                            android:layout_weight="1"
                            android:layout_marginLeft="8dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:layout_marginStart="8dp"/>
                </LinearLayout>
                <TextView
                        android:text="@string/placeholder_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tv_video_date"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_video_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/container_like_dislike"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp">
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/container_like">
                        <androidx.appcompat.widget.AppCompatImageView android:layout_width="wrap_content"
                                                                      android:layout_height="wrap_content"
                                                                      app:srcCompat="@drawable/ic_thumbs_up_off"
                                                                      android:id="@+id/iv_video_like"
                                                                      android:layout_marginRight="8dp"
                                                                      android:layout_marginEnd="8dp"/>
                        <TextView
                                android:text="@string/placeholder_views"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content" android:id="@+id/tv_video_likes_count"
                                android:layout_weight="1"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:layout_marginRight="16dp"
                                android:layout_marginEnd="16dp"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/container_dislike">
                        <androidx.appcompat.widget.AppCompatImageView android:layout_width="wrap_content"
                                                                      android:layout_height="wrap_content"
                                                                      app:srcCompat="@drawable/ic_thumbs_down_off"
                                                                      android:id="@+id/iv_video_dislike"
                                                                      android:layout_weight="1"
                                                                      android:layout_marginRight="8dp"
                                                                      android:layout_marginEnd="8dp"/>
                        <TextView
                                android:text="@string/placeholder_views"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/tv_video_dislikes_count"
                                android:layout_weight="1"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/container_video_details"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/container_like_dislike"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp">
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="1dp" android:background="@color/colorPrimary"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp" android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp">
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/container_video_event"
                            android:layout_marginTop="8dp">
                        <TextView
                                android:text="@string/event"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/tv_video_event_field"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textStyle="bold" android:layout_marginRight="8dp"
                                android:layout_marginEnd="8dp"/>
                        <TextView
                                android:text="@string/placeholder_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/tv_video_event"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/container_video_speaker"
                            android:layout_marginTop="8dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/tv_video_speaker_field"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textStyle="bold" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
                                android:text="Palestrante"/>
                        <TextView
                                android:text="@string/placeholder_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/tv_video_speaker"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/container_video_duration"
                            android:layout_marginTop="8dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/tv_video_duration_field"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textStyle="bold" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
                                android:text="Duração"/>
                        <TextView
                                android:text="@string/placeholder_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/tv_video_duration"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/container_video_source"
                            android:layout_marginTop="8dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/tv_video_source_field"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textStyle="bold" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
                                android:text="Fonte"/>
                        <TextView
                                android:text="@string/placeholder_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/tv_video_source"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>